--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.24",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
