--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.24",
+    "install": "^0.13.0",
+    "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
@@ -21,6 +26,7 @@
     "react-router-dom": "^6.26.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "react-tabs": "^6.0.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
